objects/Show__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shows2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shows1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Operation</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rule_Set__c</fullName>
        <label>Rule Set</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Logic__c</fullName>
        <label>A2Z Sales Rep Logic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Opportunity Owner</fullName>
                </value>
                <value>
                    <fullName>Opp Owner/Show Acct Owner</fullName>
                </value>
                <value>
                    <fullName>Show Account Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowID__c</fullName>
        <label>ShowID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_Code__c</fullName>
        <label>Show Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Group__c</fullName>
        <label>Show Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Show</label>
    <listViews>
        <fullName>All_Shows_lightning</fullName>
        <columns>NAME</columns>
        <columns>Show_Code__c</columns>
        <columns>Rule_Set__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Shows</label>
    </listViews>
    <nameField>
        <label>Show</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shows</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>